--- a/views/mahasiswa/home.ejs
+++ b/views/mahasiswa/home.ejs
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Ini Mahasiswa</h1>
+    <form method="POST" action="/auth/logout">
+        <button type="submit">logout</button>
+    </form>
+   
+  
 </body>
 </html>
