--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1><%= userId %></h1>
+    <h1><%= userEmail %></h1>
+    <h1><%= userRole %></h1>
+    <form method="POST" action="/auth/logout">
+
+
+        <button type="submit">logout</button>
+    </form>
+   
+  
 </body>
 </html>
