--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>login</title>
     <link href="/stylesheets/output.css" rel="stylesheet" />
   </head>
   <body class="dark:bg-neutral-900">
