viw profile & change password

--- a/views/dosen/dashboard.ejs
+++ b/views/dosen/dashboard.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Ini Dosen</h1>
+    <a href="./profile">lihat Profile</a>
     <form method="POST" action="/auth/logout">
         <button type="submit">logout</button>
     </form>
