--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Ini Admin</h1>
+
+    <a href="./profile">lihat Profile</a>
     <form method="POST" action="/auth/logout">
         <button type="submit">logout</button>
     </form>
