--- a/views/ubahpass.ejs
+++ b/views/ubahpass.ejs
@@ -7,7 +7,7 @@
 
   <style>
     body {
-      background-color: #228B22;
+      background-color: #317b31;
       font-family: sans-serif;
       display: flex;
       min-height: 100vh;
