--- a/views/admin/profiladmin.ejs
+++ b/views/admin/profiladmin.ejs
@@ -451,7 +451,7 @@ button {
                 <div class="wrapper-2">
                     <span class="text-8">Informasi Data</span
                     ><span class="text-9">Nama</span>
-                    <div class="section-2"><span class="text-a">Admin</span></div>
+                    <div class="section-2"><span class="text-a"><%= profil.email %></span></div>
                     <span class="text-b">Email</span>
                     <div class="wrapper-3">
                         <span class="text-c">admin@gmail.com</span>
@@ -459,7 +459,7 @@ button {
                     <span class="text-d">Password</span>
                     <div class="wrapper-4">
                         <div class="pic-3"></div>
-                        <span class="text-e">**********</span>
+                        <span   class="text-e">**********</span>
                     </div>
                 </div>
             </div>
