--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -1,25 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Profil</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
+<%- include('layout/header') %>
     <h1>Profil Admin </h1>
     <table>
         <tr>
@@ -31,5 +10,4 @@
     <form action="/admin/profile/ubah-password" method="get">
         <button>Ubah Password</button>
     </form>
-</body>
-</html>
+    <%- include('layout/footer') %>
