--- a/views/dosen/dashboard.ejs
+++ b/views/dosen/dashboard.ejs
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Ini Dosen</h1>
-    <a href="./profile">lihat Profile</a>
-    <form method="POST" action="/auth/logout">
-        <button type="submit">logout</button>
-    </form>
+<%- include('layout/header') %>
+<!-- Konten utama di sini -->
+<h1 class="text-2xl font-bold mb-4 mt-6"><%= page %></h1>
+
+
+
+
+
+<%- include('layout/footer') %>
    
-  
-</body>
-</html>
