--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,84 +1,71 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>login</title>
+    <title>Login</title>
     <link href="/stylesheets/output.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/images/logounand.png" type="image/x-icon">
   </head>
-  <body >
 
-
-    
-    <main id="content" class="w-full max-w-md mx-auto p-6">
-      <div class="mt-7 bg-white border border-gray-200 rounded-xl shadow-sm dark:bg-neutral-900 dark:border-neutral-700">
-        <div class="p-4 sm:p-7">
-          <div class="text-center">
-            <h1 class="block text-2xl font-bold text-gray-800 dark:text-white">Daftar Sp</h1>
-            <p class="mt-2 text-sm text-gray-600 dark:text-neutral-400">
-              Login Untuk Melanjutkan
-            
-            </p>
-          </div>
-
-          <div class="mt-5">
-
-            <!-- Form -->
-            <form method="POST" action="/auth/checklogin">
-              <div class="grid gap-y-4">
-                <!-- Form Group -->
-                <div>
-                  <label for="email" class="block text-sm mb-2 dark:text-white">Email address</label>
-                  <div class="relative">
-                    <input type="email" id="email" name="email" class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" required aria-describedby="email-error">
-                    <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
-                      <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                      </svg>
-                    </div>
-                  </div>
-                  <p class="hidden text-xs text-red-600 mt-2" id="email-error">Please include a valid email address so we can get back to you</p>
-                </div>
-                <!-- End Form Group -->
-
-                <!-- Form Group -->
-                <div>
-                  <div class="flex justify-between items-center">
-                    <label for="password" class="block text-sm mb-2 dark:text-white">Password</label>
-                    <a class="text-sm text-blue-600 decoration-2 hover:underline font-medium" href="../examples/html/recover-account.html">Forgot password?</a>
-                  </div>
-                  <div class="relative">
-                    <input type="password" id="password" name="password" class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" required aria-describedby="password-error">
-                    <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
-                      <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                      </svg>
-                    </div>
-                  </div>
-                  <p class="hidden text-xs text-red-600 mt-2" id="password-error">8+ characters required</p>
-                </div>
-                <!-- End Form Group -->
-
-                <!-- Checkbox -->
-                <div class="flex items-center">
-                  <div class="flex">
-                    <input id="remember-me" name="remember-me" type="checkbox" class="shrink-0 mt-0.5 border-gray-200 rounded text-blue-600 focus:ring-blue-500 dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800">
-                  </div>
-                  <div class="ms-3">
-                    <label for="remember-me" class="text-sm dark:text-white">Remember me</label>
-                  </div>
-                </div>
-                <!-- End Checkbox -->
-
-                <button type="submit" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">Sign in</button>
-              </div>
-            </form>
-            <!-- End Form -->
-          </div>
-        </div>
+  <style>
+    body {
+  cursor: url("/images/sword.cur"), auto;
+}
+  </style>
+  <body class="flex flex-col sm:flex-row">
+    <div class="sm:w-1/2 sm:order-first">
+      <img
+        src="/images/unand2.jpg"
+        alt="Gambar"
+        class="w-full h-auto max-h-screen object-cover"
+      />
+    </div>
+    <div class="sm:w-1/2 flex justify-center items-center">
+      <div class="w-full sm:w-96 p-6">
+        <form method="POST" action="/auth/login" class="max-w-md mx-auto">
+          <h1 class="text-2xl font-bold mb-4 text-center">
+            Daftar Semester Pendek
+          </h1>
+          <h1 class="text-l font-semi-bold mb-4 text-center">
+            Silahkan login untuk melanjutkan
+          </h1>
+          <% if (message) { %>
+          <div class="bg-red-500 text-white p-3 rounded"><%= message %></div>
+          <% } %>
+          <label class="mt-7 input input-bordered flex items-center gap-2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 16 16"
+              fill="currentColor"
+              class="w-4 h-4 opacity-70"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11ZM15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+            <input
+              class="grow"
+              placeholder="Email"
+              name="email"
+            />
+          </label>
+          <label class="mt-3 input input-bordered flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4 opacity-70"><path fill-rule="evenodd" d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z" clip-rule="evenodd" /></svg>
+            <input
+              type="password"
+              class="grow"
+              placeholder="Password"
+              name="password"
+            />
+          </label>
+          <button type="submit" class="mt-7 btn btn-primary w-full">
+            Login
+          </button>
+        </form>
       </div>
-    </main>
-<!-- asdasd -->
-
-
+    </div>
     <script src="../node_modules/preline/dist/preline.js"></script>
   </body>
 </html>
