--- a/views/mahasiswa/home.ejs
+++ b/views/mahasiswa/home.ejs
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Ini Mahasiswa</h1>
-    <a href="./profile">lihat Profile</a>
-    <form method="POST" action="/auth/logout">
-        <button type="submit">logout</button>
-    </form>
-   
-  
-</body>
-</html>
+
+    <%- include('layout/header') %>
+
+
+     
+
+      <h1 class="text-2xl font-bold">Ini Mahasiswa</h1>
+      <a href="./profile">lihat Profile</a>
+      <%- include('layout/footer') %>
