--- a/views/mahasiswa/profile.ejs
+++ b/views/mahasiswa/profile.ejs
@@ -1,59 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Profil</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-    <h1>Profil Mahasiswa </h1>
-    <table>
-        <tr>
-            <th>Nama:</th>
-            <td><%= user.Student.name %></td>
-        </tr>
-        <tr>
-            <th>NIM:</th>
-            <td><%= user.Student.nim %></td>
-        </tr>
-        <tr>
-            <th>Email:</th>
-            <td><%= user.email %></td>
-        </tr>
-        <tr>
-            <th>Tanggal Lahir:</th>
-            <td><%= tanggalLahir  %></td>
-        </tr>
-        <tr>
-            <th>Telepon:</th>
-            <td><%= user.Student.phone %></td>
-        </tr>
-        <tr>
-            <th>Jenis Kelamin:</th>
-            <td><%= user.Student.gender %></td>
-        </tr>
-        <tr>
-            <th>Alamat:</th>
-            <td><%= user.Student.address %></td>
-        </tr>
-    </table>
-    <br>
-    <form action="/profile/ubah-password" method="get">
-        <button>Ubah Password</button>
-    </form>
-</body>
-</html>
+
+
+    <%- include('layout/header') %>
+
+      <!-- content -->
+      <h1 class="text-3xl font-bold mb-4">Profil Mahasiswa</h1>
+      <div class="overflow-x-auto">
+        <table class="table table-compact w-full">
+          <tbody>
+            <tr>
+              <th>Nama:</th>
+              <td><%= user.Student.name %></td>
+            </tr>
+            <tr>
+              <th>NIM:</th>
+              <td><%= user.Student.nim %></td>
+            </tr>
+            <tr>
+              <th>Email:</th>
+              <td><%= user.email %></td>
+            </tr>
+            <tr>
+              <th>Tanggal Lahir:</th>
+              <td><%= tanggalLahir %></td>
+            </tr>
+            <tr>
+              <th>Telepon:</th>
+              <td><%= user.Student.phone %></td>
+            </tr>
+            <tr>
+              <th>Jenis Kelamin:</th>
+              <td><%= user.Student.gender %></td>
+            </tr>
+            <tr>
+              <th>Alamat:</th>
+              <td><%= user.Student.address %></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+        <a href="./profile/ubah-password" class="btn btn-primary mt-4">Ubah Password</a>
+ 
+    <%- include('layout/footer') %>
