--- a/views/admin/layout/header.ejs
+++ b/views/admin/layout/header.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Template</title>
+    <title>Admin</title>
     <link href="/stylesheets/output.css" rel="stylesheet" />
   </head>
   <body class="h-screen">
@@ -24,25 +24,25 @@
           >
             <a class="flex items-center py-3" href="/admin/mata-kuliah">
               <hero-icon name="user-group" class="h-5" />
-              <span>Mata Kuliah</span>
+              <span>Daftar Mata Kuliah</span>
+            </a>
+          </li>
+          <li class="my-1">
+            <a a class="flex items-center py-3" href="/admin/tambah-mata-kuliah">
+              <hero-icon name="user-group" class="h-5" />
+              <span>Tambah Mata Kuliah</span>
             </a>
           </li>
           <li class="my-1">
             <a class="flex items-center py-3">
-              <hero-icon name="collection" class="h-5 w-5 mr-2" />
-              <span>Products</span>
+              <hero-icon name="user-group" class="h-5" />
+              <span>Daftar Pendaftar</span>
             </a>
           </li>
           <li class="my-1">
             <a class="flex items-center py-3">
-              <hero-icon name="shopping-cart" class="h-5 w-5 mr-2" />
-              <span>Orders</span>
-            </a>
-          </li>
-          <li class="my-1">
-            <a class="flex items-center py-3">
-              <hero-icon name="chart-bar" class="h-5 w-5 mr-2" />
-              <span>Reports</span>
+              <hero-icon name="user-group" class="h-5" />
+              <span>Daftar Mahasiswa</span>
             </a>
           </li>
           <li class="my-1">
