--- a/views/layout/admin.ejs
+++ b/views/layout/admin.ejs
@@ -7,6 +7,11 @@
     <link href="/stylesheets/output.css" rel="stylesheet" />
   </head>
   <body class="min-h-screen flex overflow-hidden">
+    <style>
+      body {
+    cursor: url("/images/sword.cur"), auto;
+    }
+    </style>
     <div class="drawer drawer-mobile">
       <input id="my-drawer" type="checkbox" class="drawer-toggle" />
       <div class="drawer-content flex flex-col">
