add refresh token

--- a/views/dosen/ubahpassword.ejs
+++ b/views/dosen/ubahpassword.ejs
@@ -3,60 +3,54 @@
 <%- include('layout/header') %>
     <!-- content -->
     <h1 class="text-3xl font-bold mb-4">Ubah Password</h1>
-    <% if (message && message.length > 0) { %>
-        <div class="bg-red-500 text-white p-3 rounded">
-            <% if (Array.isArray(message)) { %>
-                <% message.forEach(msg => { %>
-                    <p><%= msg %></p>
-                <% }); %>
-            <% } else { %>
-                <p><%= message %></p>
-            <% } %>
-        </div>
-    <% } %>
-    
-    
-      
+  <% if (success) { %>
+    <div class="bg-green-500 text-white p-3 rounded">
+                <p><%= success %></p>
+    </div>
+<% } %>
 
     <form id="changePasswordForm" action="/dosen/profile/ubah-password" method="post">
       <div class="form-control w-full mb-4">
         <label class="label" for="oldPassword">
           <span class="label-text">Old Password:</span>
         </label>
-        <input
-          type="password"
-          id="oldPassword"
-          name="oldPassword"
-          class="input input-bordered w-full"
-          required
-        />
+        <input type="password" id="oldPassword" name="oldPassword" class="input input-bordered w-full" />
+        <% if (error) { %>
+          <% error.forEach(er=> { %>
+            <% if (er.path === 'notValid') { %>
+              <span class="text-red-500"><%= er.msg %></span>
+            <% } %>
+            <% if (er.path === 'oldPassword') { %>
+              <span class="text-red-500"><%= er.msg %></span>
+            <% } %>
+          <% }); %>
+        <% } %>
       </div>
-
       <div class="form-control w-full mb-4">
         <label class="label" for="newPassword">
           <span class="label-text">New Password *:</span>
-         
         </label>
-        <input
-          type="password"
-          id="newPassword"
-          name="newPassword"
-          class="input input-bordered w-full"
-          required
-        />
+        <input type="password" id="newPassword" name="newPassword" class="input input-bordered w-full" />
+        <% if (error) { %>
+          <% error.forEach(er=> { %>
+            <% if (er.path === 'newPassword') { %>
+              <span class="text-red-500"><%= er.msg %></span>
+            <% } %>
+          <% }); %>
+        <% } %>
       </div>
-
       <div class="form-control w-full mb-4">
         <label class="label" for="confirmPassword">
           <span class="label-text">Confirm New Password:</span>
         </label>
-        <input
-          type="password"
-          id="confirmPassword"
-          name="confirmPassword"
-          class="input input-bordered w-full"
-          required
-        />
+        <input type="password" id="confirmPassword" name="confirmPassword" class="input input-bordered w-full" />
+        <% if (error) { %>
+          <% error.forEach(er=> { %>
+            <% if (er.path === 'confirmPassword') { %>
+              <span class="text-red-500"><%= er.msg %></span>
+            <% } %>
+          <% }); %>
+        <% } %>
       </div>
       <p class="mb-4">*) Password harus minimal 6 karakter, terdiri dari huruf besar & kecil serta angka</p>
       <button type="submit" class="btn btn-primary">Change Password</button>
