--- a/views/dosen/layout/header.ejs
+++ b/views/dosen/layout/header.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Template</title>
+    <title></title>
     <link href="/stylesheets/output.css" rel="stylesheet" />
+    <link rel="icon" href="/images/logounand.png" type="image/x-icon">
   </head>
   <body class="h-screen">
     <div class="flex  h-full">
@@ -53,7 +54,7 @@
           </li>
         </ul>
       </div>
-      <div class="flex-1">
+      <div class="flex-1 flex flex-col h-full">
     <!-- navbar -->
     <div class="navbar bg-primary ">
         <div class="flex-1">
