--- a/views/mahasiswa/layout/header.ejs
+++ b/views/mahasiswa/layout/header.ejs
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/output.css" />
     <link rel="icon" href="/images/logounand.png" type="image/x-icon">
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <title><%= title %></title>
   </head>
   <body class="min-h-screen flex flex-col">
 
     <%- include('navbar') %>
     <main class="flex-grow">
-        <div class="container  my-5 px-10">
+       
