--- a/views/mahasiswa/profile.ejs
+++ b/views/mahasiswa/profile.ejs
@@ -1,7 +1,7 @@
 
 
     <%- include('layout/header') %>
-
+    <div class="container my-10 px-16 mt-12">
       <!-- content -->
       <h1 class="text-3xl font-bold mb-4">Profil Mahasiswa</h1>
       <div class="overflow-x-auto">
@@ -40,5 +40,5 @@
       </div>
 
         <a href="./profile/ubah-password" class="btn btn-primary mt-4">Ubah Password</a>
- 
+ </div>
     <%- include('layout/footer') %>
