--- a/views/mahasiswa/ubahpassword.ejs
+++ b/views/mahasiswa/ubahpassword.ejs
@@ -1,7 +1,7 @@
 
 
 <%- include('layout/header') %>
-
+<div class="container my-10 px-16 mt-12 ">
 <h1 class="text-3xl font-bold mb-4">Ubah Password</h1>
 <% if (success) { %>
 <div class="bg-green-500 text-white p-3 rounded">
@@ -55,4 +55,5 @@
   <p class="mb-4">*) Password harus minimal 6 karakter, terdiri dari huruf besar & kecil serta angka</p>
   <button type="submit" class="btn btn-primary">Change Password</button>
 </form>
+</div>
 <%- include('layout/footer') %>
