--- a/views/mahasiswa/home.ejs
+++ b/views/mahasiswa/home.ejs
@@ -1,9 +1,72 @@
+<%- include('layout/header') %>
 
-    <%- include('layout/header') %>
+<div
+  class="relative w-full h-screen bg-cover bg-center bg-no-repeat"
+  style="
+    background-image: url('https://plus.unsplash.com/premium_photo-1669863280125-7789ef60adc0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  "
+>
+  <div
+    class="absolute inset-0 bg-black bg-opacity-50 flex flex-col items-center justify-center text-center text-white"
+  >
+    <h1 class="text-5xl font-bold my-5 px-10">
+      Pendaftaran Semester Pendek Jurusan Sistem Informasi
+    </h1>
+    <p class="py-6">Fakultas Teknologi Informasi Universitas Andelass</p>
+    <div class="btn-group">
+      <button class="btn btn-primary">Daftar</button>
+      <button class="btn btn-ghost">Lainnya</button>
+    </div>
+  </div>
+</div>
+<div class="container my-10 px-16 mt-28">
+  <div class="hero-content flex-col lg:flex-row-reverse mb-20">
+    <img
+      src="https://images.unsplash.com/photo-1714594847594-93392cb36c07?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      class="max-w-sm rounded-lg shadow-2xl"
+    />
+    <div class="mr-16">
+      <h1 class="text-3xl font-bold">
+        Pendaftaran Semester Pendek Jurusan Sistem Informasi
+      </h1>
+      <p class="py-6 text-justify">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quidem
+        blanditiis hic fugiat cupiditate ducimus, vero temporibus obcaecati
+        commodi omnis, asperiores quo ipsum illo, fugit ut error maiores dolor
+        explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Porro nulla tempora rerum pariatur, et quis nobis? Libero,
+        exercitationem ea, adipisci expedita voluptatibus porro, odit
+        consectetur magni illo veritatis sint totam.
+      </p>
 
+      <button class="btn btn-primary">Daftar</button>
+    </div>
+  </div>
+  <div class="hero-content flex-col lg:flex-row mb-20">
+    <img
+      src="https://images.unsplash.com/photo-1714594847594-93392cb36c07?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      class="max-w-sm rounded-lg shadow-2xl mr-16"
+    />
+    <div class="">
+      <h1 class="text-3xl font-bold">
+        Pendaftaran Semester Pendek Jurusan Sistem Informasi
+      </h1>
+      <p class="py-6 text-justify">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quidem
+        blanditiis hic fugiat cupiditate ducimus, vero temporibus obcaecati
+        commodi omnis, asperiores quo ipsum illo, fugit ut error maiores dolor
+        explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Porro nulla tempora rerum pariatur, et quis nobis? Libero,
+        exercitationem ea, adipisci expedita voluptatibus porro, odit
+        consectetur magni illo veritatis sint totam.
+      </p>
+    
+        <div>
+          <button class="btn btn-primary ">Daftar</button>
+        </div>
+    
+    </div>
+  </div>
+</div>
 
-     
-
-      <h1 class="text-2xl font-bold">Ini Mahasiswa</h1>
-      <a href="./profile">lihat Profile</a>
-      <%- include('layout/footer') %>
+<%- include('layout/footer') %>
