--- a/views/mahasiswa/layout/footer.ejs
+++ b/views/mahasiswa/layout/footer.ejs
@@ -1,7 +1,7 @@
-</div>
+
 </main>
 
-    <footer class="footer footer-center p-10 bg-primary text-primary-content">
+    <footer class="footer mt-28 footer-center p-10 bg-primary text-primary-content">
       <div>
         <p class="font-bold">
           Depertemen Sistem Informasi - Universitas Andalas
@@ -52,6 +52,6 @@
         </div>
       </div>
     </footer>
-
+    
 </body>
 </html>
