--- a/views/mahasiswa/layout/navbar.ejs
+++ b/views/mahasiswa/layout/navbar.ejs
@@ -27,7 +27,7 @@
           >Informasi</a></li>
         <% if (role!=="mahasiswa"){ %>
 
-          <li> <a href="auth/login">Login</a></li>
+          <li> <a href="/auth/login">Login</a></li>
           <% } %>
        
       <% if (role==="mahasiswa"){ %>
