--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Found</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Page Not Found</title>
+  <link rel="stylesheet" href="/stylesheets/output.css" />
+
 </head>
-<body>
-    <h1>Opps Kamu terlalu Jauh, Silahkan Kembali</h1>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+  <div class="text-center">
+    <img src="/images/lost.gif" alt="Not Found" class="mx-auto mb-4 w-64">
+    <h1 class="text-6xl font-bold mb-2 text-gray-800">404</h1>
+    <p class="text-2xl text-gray-600 mb-4">Oops! Page not found.</p>
+    <!-- <p class="text-gray-500 mb-8">The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p> -->
+    <a href="/" class="btn btn-primary">Go to Homepage</a>
+  </div>
 </body>
 </html>
