--- a/views/admin/matkulaktif.ejs
+++ b/views/admin/matkulaktif.ejs
@@ -29,7 +29,7 @@
         <td>0/<%= subject.capacity %></td>
         <td>
           <a href="#" class="btn btn-sm btn-primary mr-2">Mahasiswa</a>
-          <a href="#" class="btn btn-sm btn-warning mr-2">Jadwal</a>
+          <a href="/admin/mata-kuliah-aktif/jadwal/<%= subject.id %>" class="btn btn-sm btn-warning mr-2">Jadwal</a>
         </td>
         
       </tr>
